@@ -6,6 +6,6 @@ rem ######### Find the Parliament installation directory: #########
 set PMNT_DIR=%~dp0
 
 rem ######### User-settable configuration parameters: #########
-powershell -Command "%PMNT_DIR%parliament.ps1 -interactive"
+powershell -Command "%PMNT_DIR%parliament.ps1 -foreground"
 
 endlocal
